--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         />
         <h2 class="text-3xl font-semibold">Hi, I'm FERY RAMDANIA</h2>
         <p class="mt-2 text-gray-600 dark:text-gray-300">
-          A Web Developer & Content Creator
+          A Content Creator & Programming Learner
         </p>
         <a
           href="#about"
@@ -142,7 +142,7 @@
             href="https://www.youtube.com/@Xmooday"
             target="_blank"
             class="inline-block bg-blue-400 text-white px-4 py-2 rounded-full hover:bg-blue-500"
-            >Lihat Project</a
+            >View Project</a
           >
         </div>
         <!-- Project Card 2 -->
@@ -162,10 +162,10 @@
             efficient learning tool. © 2024
           </p>
           <a
-            href="#"
+            href="https://xfry-1270.github.io/Hitbar/"
             target="_blank"
             class="inline-block bg-blue-400 text-white px-4 py-2 rounded-full hover:bg-blue-500"
-            >Lihat Project</a
+            >View Project</a
           >
         </div>
         <!-- Tambahkan project tambahan di sini -->
